packages/compiler/tests/snapshots/snapshot_tests__snapshot_operator_precedence.snap
---
source: tests/snapshot_tests.rs
expression: ast
---
statements:
  - Expression:
      BinaryOp:
        left:
          BinaryOp:
            left:
              Literal:
                value:
                  Number: 2
                literal_type: number
            operator: +
            right:
              BinaryOp:
                left:
                  Literal:
                    value:
                      Number: 3
                    literal_type: number
                operator: "*"
                right:
                  BinaryOp:
                    left:
                      Literal:
                        value:
                          Number: 4
                        literal_type: number
                    operator: "**"
                    right:
                      Literal:
                        value:
                          Number: 2
                        literal_type: number
        operator: "-"
        right:
          Literal:
            value:
              Number: 1
            literal_type: number
