packages/compiler/tests/snapshots/snapshot_tests__snapshot_simple_assignment.snap
---
source: tests/snapshot_tests.rs
expression: ast
---
statements:
  - Assignment:
      variable: x
      value:
        Literal:
          value:
            Number: 42
          literal_type: number
