packages/compiler/tests/snapshots/snapshot_tests__snapshot_string_literals.snap
---
source: tests/snapshot_tests.rs
expression: ast
---
statements:
  - Assignment:
      variable: message
      value:
        Literal:
          value:
            String: "Hello, Cortex!"
          literal_type: string
